WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303970
REGRESSION(
304264@main
): Broke visionOS Debug builds
https://bugs.webkit.org/show_bug.cgi?id=303970
Summary
REGRESSION(304264@main): Broke visionOS Debug builds
Jonathan Bedard
Reported
2025-12-10 20:43:18 PST
Private field 'm_handle' is not used
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-10 20:43:28 PST
<
rdar://problem/166272421
>
Jonathan Bedard
Comment 2
2025-12-10 20:44:37 PST
rdar://166272287
Jonathan Bedard
Comment 3
2025-12-10 20:45:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55225
EWS
Comment 4
2025-12-10 21:03:52 PST
Committed
304275@main
(8c587e099bea): <
https://commits.webkit.org/304275@main
> Reviewed commits have been landed. Closing PR #55225 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug