REGRESSION(304264@main): Broke visionOS Debug builds https://bugs.webkit.org/show_bug.cgi?id=303970 rdar://166272287

Unreviewed build fix.

* Source/WebCore/Modules/webxr/WebXRInputSpace.h:

Canonical link: https://commits.webkit.org/304275@main